--- a/index.html
+++ b/index.html
@@ -70,9 +70,13 @@
                 <li><a href="#">Learn at your own pace</a></li>
                 <li><a href="#">Complete curriculum</a></li>
             </ul>
-
         </div>
-
+        <div class="clear"></div>
+            <footer class="footer">
+                <div>
+                    <p>Company name. Copyright &copy; 2015-2020.</p>
+                </div>
+            </footer>
     </div>
 </body>
 
