renaming home folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Maths Site</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link rel="stylesheet" href="/WEBSITES/1. Maths Website (HTML CSS)/style.css">
+    <link rel="stylesheet" href="/WEBSITES/MathsWebsite/style.css">
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Varela&display=swap">
 </head>
 
