--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <title>Maths Site</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link rel="stylesheet" href="/WEBSITES/MathsWebsite/style.css">
+    <link rel="stylesheet" href="/MathsWebsite/style.css">
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Varela&display=swap">
 </head>
 
@@ -16,7 +16,7 @@
                 <h1><a href="#">Maths the Fun way.</a></h1>
             </div>
             <div id="search-box">
-                <form action="" method="get">
+                <form action="/" method="get">
                     <input type="text" class="text-input">
                     <input type="submit" value="Search a topic" class="submit-btn">
                 </form>
